--- a/Sprawozdanie-OE2.ipynb
+++ b/Sprawozdanie-OE2.ipynb
@@ -35,26 +35,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a08ff749af7d088d",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T09:40:26.281197600Z",
-     "start_time": "2023-10-28T09:40:26.265133500Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Import bibliotek\n",
-    "\n",
-    "import benchmark_functions as bf\n",
-    "import opfunu as of\n",
-    "import matplotlib as plt"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "da29d473f4dd097b",
    "metadata": {
@@ -63,63 +43,15 @@
    "source": [
     "## Analizowana funkcja - Funkcja Rana\n",
     "\n",
-    "Wykres poglądowy:"
+    "Wzór:\n",
+    "$$\n",
+    "f(x)=\\sum_{i=0}^{N-2}x_i\\cos\\sqrt{\\|x_{i+1}+x_i+1\\|}\\sin\\sqrt{\\|x_{i+1}-\n",
+    "x_i+1\\|}+(1+x_{i+1})\\sin\\sqrt{\\|x_{i+1}+x_i+1\\|}\\cos\\sqrt{\\|x_{i+1}-x_i+1\\|}\n",
+    "$$\n",
+    "Wykres poglądowy 2-wymiarowej funkcji Rana:\n",
+    "\n",
+    "![Rana plot](plots/Rana.png)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "id": "9d08a6cd5e714b0d",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T09:44:05.938410500Z",
-     "start_time": "2023-10-28T09:44:05.870992200Z"
-    }
-   },
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'FigureCanvasAgg' object has no attribute 'set_window_title'",
-     "output_type": "error",
-     "traceback": [
-      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
-      "\u001B[1;31mAttributeError\u001B[0m                            Traceback (most recent call last)",
-      "Cell \u001B[1;32mIn[19], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m func \u001B[38;5;241m=\u001B[39m bf\u001B[38;5;241m.\u001B[39mRana(n_dimensions\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m)\n\u001B[1;32m----> 2\u001B[0m \u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mshow\u001B[49m\u001B[43m(\u001B[49m\u001B[43mshowPoints\u001B[49m\u001B[38;5;241;43m=\u001B[39;49m\u001B[43mfunc\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mminima\u001B[49m\u001B[43m(\u001B[49m\u001B[43m)\u001B[49m\u001B[43m)\u001B[49m\n\u001B[0;32m      3\u001B[0m func\u001B[38;5;241m.\u001B[39mshow(asHeatMap\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
-      "File \u001B[1;32m~\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\benchmark_functions\\benchmark_functions.py:198\u001B[0m, in \u001B[0;36mBenchmarkFunction.show\u001B[1;34m(self, bounds, asHeatMap, resolution, showPoints)\u001B[0m\n\u001B[0;32m    196\u001B[0m \tZ \u001B[38;5;241m=\u001B[39m np\u001B[38;5;241m.\u001B[39masarray([[\u001B[38;5;28mself\u001B[39m((X[i][j],Y[i][j])) \u001B[38;5;28;01mfor\u001B[39;00m j \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X[i]))] \u001B[38;5;28;01mfor\u001B[39;00m i \u001B[38;5;129;01min\u001B[39;00m \u001B[38;5;28mrange\u001B[39m(\u001B[38;5;28mlen\u001B[39m(X))])\n\u001B[0;32m    197\u001B[0m fig \u001B[38;5;241m=\u001B[39m plt\u001B[38;5;241m.\u001B[39mfigure()\n\u001B[1;32m--> 198\u001B[0m \u001B[43mfig\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mcanvas\u001B[49m\u001B[38;5;241;43m.\u001B[39;49m\u001B[43mset_window_title\u001B[49m(\u001B[38;5;124m'\u001B[39m\u001B[38;5;124mBenchmark Function: \u001B[39m\u001B[38;5;124m'\u001B[39m\u001B[38;5;241m+\u001B[39m\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    199\u001B[0m fig\u001B[38;5;241m.\u001B[39msuptitle(\u001B[38;5;28mself\u001B[39m\u001B[38;5;241m.\u001B[39m_name)\n\u001B[0;32m    200\u001B[0m \u001B[38;5;28;01mif\u001B[39;00m asHeatMap:\n",
-      "\u001B[1;31mAttributeError\u001B[0m: 'FigureCanvasAgg' object has no attribute 'set_window_title'"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": "<Figure size 640x480 with 0 Axes>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "func = bf.Rana(n_dimensions=2)\n",
-    "func.show(showPoints=func.minima())\n",
-    "func.show(asHeatMap=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "outputs": [],
-   "source": [
-    "func = of.name_based.r_func.Rana(ndim=2)\n",
-    "plt.pyplot.show(func)    \n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T09:41:30.153590500Z",
-     "start_time": "2023-10-28T09:41:30.110811300Z"
-    }
-   },
-   "id": "28e7b95d543c3741"
   },
   {
    "cell_type": "markdown",
@@ -133,145 +65,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Running calculations...\n",
-      "Range start: -512\n",
-      "Range end: 512\n",
-      "Epoch: 100\n",
-      "Population size: 100\n",
-      "Precision: 0.1\n",
-      "Elite strategy: 5\n",
-      "Variable number: 2\n",
-      "Cross probability: 20\n",
-      "Mutation probability: 20\n",
-      "Inversion probability: 20\n",
-      "Picked selection_method: best\n",
-      "Percent to next: 20.0\n",
-      "Tournaments: 20.0\n",
-      "Picked cross_method: uniform\n",
-      "Picked mutation_method: one point\n",
-      "Picked is min/max \"0\"\n",
-      "Is real: \"0\"\n",
-      "Exporting...\n",
-      "C:/Users/Hyperbook/Documents/Magister/OE1/OE1/csv_files/test.csv\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception in Tkinter callback\n",
-      "Traceback (most recent call last):\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\tkinter\\__init__.py\", line 1948, in __call__\n",
-      "    return self.func(*args)\n",
-      "           ^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\libs\\UI\\window.py\", line 35, in open\n",
-      "    Calculations.run_calculations(\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 175, in run_calculations\n",
-      "    Calculations.export_to_csv()\n",
-      "  File \"C:\\Users\\Hyperbook\\Documents\\Magister\\OE1\\OE1\\app\\calculate.py\", line 229, in export_to_csv\n",
-      "    data = np.reshape(data, (data.shape[0], ))\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 285, in reshape\n",
-      "    return _wrapfunc(a, 'reshape', newshape, order=order)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
-      "  File \"C:\\Users\\Hyperbook\\AppData\\Local\\Programs\\Python\\Python312\\Lib\\site-packages\\numpy\\core\\fromnumeric.py\", line 59, in _wrapfunc\n",
-      "    return bound(*args, **kwds)\n",
-      "           ^^^^^^^^^^^^^^^^^^^^\n",
-      "ValueError: cannot reshape array of size 2200 into shape (100,)\n"
-     ]
-    }
-   ],
+   "execution_count": null,
+   "outputs": [],
    "source": [
     "! python main.py"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-30T21:50:51.376786100Z",
-     "start_time": "2023-10-30T21:50:37.593512900Z"
-    }
+    "collapsed": false
    },
    "id": "35a8503fda590a37"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Zczytanie danych z obliczonego wcześniej programu"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "45dee61110993867"
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "da72740eccc4128c",
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T06:35:28.026270Z",
-     "start_time": "2023-10-28T06:35:27.976074200Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "#Tutaj teoretycznie będą 3 subploty, więc wtedy można to opisać w ten sposób, ale ja bym je jakoś rozdzielił, tak jak w tych punktach poniżej.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8e49b764b9570c96",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "## Wykresy zależności funkcji celu od iteracji"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "613b623a8d13e085",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-26T21:53:14.045461300Z",
-     "start_time": "2023-10-26T21:53:14.040419800Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "adcd3993771709fa",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
-    "## Średnie wartości w kolejnych iteracjach"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "42d65f4579b8416f",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-26T21:53:14.479113700Z",
-     "start_time": "2023-10-26T21:53:14.475974700Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
@@ -280,51 +82,33 @@
     "collapsed": false
    },
    "source": [
-    "## Odchylenie standardowe w kolejnych iteracjach"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "c3b1a8ec6157a733",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2023-10-26T21:53:15.362877700Z",
-     "start_time": "2023-10-26T21:53:15.359798800Z"
-    },
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    " "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "597c83181470d809",
-   "metadata": {
-    "collapsed": false
-   },
-   "source": [
     "## Porównanie wyników\n",
     "\n",
+    "Poniżej przedstawione jest kilka przykładów, wraz z odpowiadającymi im wykresami, oraz wynikami, które potem będą porównane.\n",
+    "\n",
+    "Parametry podstawowe:\n",
     "* Zakres ∈ <-512;512>\n",
-    "* Populacja = 100\n",
-    "* Liczba epok = 200\n",
+    "* Populacja = 1000\n",
+    "* Liczba epok = 1000\n",
+    "* Liczba zmiennych = 2 \n",
     "* Precyzja = 0.1\n",
     "* Liczba bitów = 25\n",
-    "* Liczba chromosomów używanych w metodach best i tournament = 20\n",
+    "* Liczba chromosomów w metodzie turniejowej i best = 20\n",
+    "* Procent brany w strategii elitarnej = 1%\n",
+    "* Max, czy min = Min\n",
+    "\n",
+    "\n",
     "\n",
     "Konfiguarcja #1: \n",
-    "* Prawdopodobieństwo mutacji: 0\n",
-    "* Prawdopodobieństwo krzyżowania: 0.4 \n",
-    "* Prawdopodobieństwo inwersji: 0.1\n",
+    "* Prawdopodobieństwo mutacji: 0.4\n",
+    "* Prawdopodobieństwo krzyżowania: 0.8 \n",
+    "* Prawdopodobieństwo inwersji: 0.2\n",
     "* Wybrana strategia: Tournament\n",
-    "* Rodzaj krzyzowania: Two Point\n",
-    "* Wybrany rodzaj mutacji: n/a\n",
+    "* Rodzaj krzyzowania: Arithmetic\n",
+    "* Wybrany rodzaj mutacji: Uniform\n",
     "* Max, czy min: Min\n",
     "\n",
-    "![Configuration 1](plots/conf1.png)"
+    "![Configuration 1](plots/real_conf1.png)"
    ]
   },
   {
@@ -332,16 +116,12 @@
    "execution_count": null,
    "id": "4f5514f1c90e57a",
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-10-28T06:35:14.025203200Z",
-     "start_time": "2023-10-28T06:35:14.011162100Z"
-    }
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "# Result found in 0:00:00:03558 seconds\n",
-    "# f(0, 10) = [1.8862700095168572]"
+    "# Result found in 0:00:03:187570 seconds\n",
+    "# f(-43.48062160105746, 451.1398675964472) = [-424.1005475279727]"
    ]
   },
   {
@@ -356,15 +136,15 @@
     "collapsed": false
    },
    "source": [
-    "Konfiguarcja - Olek #2: \n",
-    "* Prawdopodobieństwo mutacji: 50%\n",
-    "* Prawdopodobieństwo krzyżowania: 50%\n",
-    "* Prawdopodobieństwo inwersji: 50%\n",
-    "* Wybrana strategia: Select Best\n",
-    "* Rodzaj krzyzowania: Two Point\n",
-    "* Wybrany rodzaj mutacji: Two Point\n",
-    "* Max, czy min: Min\n",
-    "![1cop.PNG](attachment:1cop.PNG)"
+    "Konfiguarcja #2: \n",
+    "* Prawdopodobieństwo mutacji = 0.5\n",
+    "* Prawdopodobieństwo krzyżowania = 0.5\n",
+    "* Prawdopodobieństwo inwersji = 0.5\n",
+    "* Wybrana strategia = Roulette\n",
+    "* Rodzaj krzyzowania = Linear\n",
+    "* Wybrany rodzaj mutacji = Gaussian\n",
+    "\n",
+    "![Configuration 2](plots/real_conf2.png)"
    ]
   },
   {
@@ -374,14 +154,14 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2023-10-28T06:35:14.026206800Z",
-     "start_time": "2023-10-28T06:35:14.019192100Z"
+     "end_time": "2023-11-05T19:35:27.148067100Z",
+     "start_time": "2023-11-05T19:35:27.139036200Z"
     }
    },
    "outputs": [],
    "source": [
-    "# Result found in 0.002016 seconds\n",
-    "# f(0, 10) = [1.8862700095168572]"
+    "# Result found in 0:01:47:255207 seconds\n",
+    "# f(442.733091920816, 35.41288021302759) = [-424.3410075315915]"
    ]
   },
   {
@@ -392,26 +172,32 @@
    },
    "source": [
     "Konfiguracja #3:\n",
-    "* Prawdopodobieństwo mutacji:\n",
-    "* Prawdopodobieństwo krzyżowania:\n",
-    "* Prawdopodobieństwo inwersji:\n",
-    "* Wybrana strategia:\n",
-    "* Rodzaj krzyzowania:\n",
-    "* Wybrany rodzaj mutacji:\n",
-    "* Max, czy min:\n",
+    "* Prawdopodobieństwo mutacji = 0.9\n",
+    "* Prawdopodobieństwo krzyżowania = 0.9\n",
+    "* Prawdopodobieństwo inwersji = 0.9\n",
+    "* Wybrana strategia = Tournament\n",
+    "* Rodzaj krzyzowania = Blend Crossover Alpha\n",
+    "* Wybrany rodzaj mutacji = Uniform\n",
     "\n",
-    "![Configuration 3](plots/conf3.png)"
+    "![Configuration 3](plots/real_conf3.png)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "52e38b3e6b622789",
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2023-11-05T19:35:27.158662400Z",
+     "start_time": "2023-11-05T19:35:27.147065700Z"
+    }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Result found in 0:00:12:202283 seconds\n",
+    "# f(-41.20359124733889, 453.6274097993692) = [-434.75072971385976]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -421,15 +207,14 @@
    },
    "source": [
     "Konfiguracja #4:\n",
-    "* Prawdopodobieństwo mutacji: 70%\n",
-    "* Prawdopodobieństwo krzyżowania: 70%\n",
-    "* Prawdopodobieństwo inwersji: 70%\n",
-    "* Wybrana strategia: Roulette\n",
-    "* Rodzaj krzyzowania: One Point\n",
-    "* Wybrany rodzaj mutacji: Edge\n",
-    "* Max, czy min: Max\n",
+    "* Prawdopodobieństwo mutacji = 0.7\n",
+    "* Prawdopodobieństwo krzyżowania = 0.7\n",
+    "* Prawdopodobieństwo inwersji = 0.7\n",
+    "* Wybrana strategia = Best\n",
+    "* Rodzaj krzyzowania = Blend Crossover Alpha Beta\n",
+    "* Wybrany rodzaj mutacji = Gaussian\n",
     "\n",
-    "![Configuration 4](plots/conf4.png)"
+    "![Configuration 4](plots/real_conf4.png)"
    ]
   },
   {
@@ -441,9 +226,40 @@
    },
    "outputs": [],
    "source": [
-    "# Result found in 0:00:00:020000 seconds\n",
-    "# f(0, 10) = [1.8862700095168572]"
+    "# Result found in 0:00:06.19056 seconds\n",
+    "# f(452.2964724846119, -97.73450254647534) = [-448.35260955122175]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "Konfiguracja #5:\n",
+    "* Prawdopodobieństwo mutacji = 0.4\n",
+    "* Prawdopodobieństwo krzyżowania = 0.8\n",
+    "* Prawdopodobieństwo inwersji = 0.4\n",
+    "* Wybrana strategia = Best\n",
+    "* Rodzaj krzyzowania = Average Crossover\n",
+    "* Wybrany rodzaj mutacji = Uniform\n",
+    "\n",
+    "![Configuration 5](plots/real_conf5.png)\n"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e9dd3ba1bf2abc77"
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Result found in 0:00:01.244297 seconds\n",
+    "# f(-280.8781219689222, -432.6809245807742) = [-413.3311458614435]"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f9fd8706da5cea32"
   },
   {
    "cell_type": "markdown",
@@ -452,9 +268,28 @@
     "collapsed": false
    },
    "source": [
-    "Tabela z porównaniem wyników:\n",
+    "Tabela z wynikami dla klasycznej reprezentacji binarnej:\n",
     "\n",
-    "Będzie wstawiona, gdy będą wyniki."
+    "|     Metoda     |          #1         |          #2         |         #3         |         #4         |    Wynik idealny    |\n",
+    "|:--------------:|:-------------------:|:-------------------:|:------------------:|:------------------:|:-------------------:|\n",
+    "| Czas obliczeń: |    0:00:28:057137   |    0:01:09:103718   |   0:00:10:103718   |   0:00:01.002794   |         N/A         |\n",
+    "|     Wynik:     | -490.44155743728703 |  -489.1288596166677 | -467.2650857226316 | -479.6659649577644 | -511.72973973049955 |\n",
+    "|       x1       |  -493.4909623839766 | -303.89838788470934 | 475.48216902784566 |  479.9843673668784 |     -488.662570     |\n",
+    "|       x2       |   403.446995603322  |   502.495359062042  | -431.9609184171959 |  501.494870542257  |        512.0        \n",
+    "\n",
+    "Tabela z wynikami dla reprezentacji rzeczywistej:\n",
+    "\n",
+    "\n",
+    "|     Metoda     |         #1         |         #2         |          #3         |          #4         |         #5         |    Wynik idealny    |\n",
+    "|:--------------:|:------------------:|:------------------:|:-------------------:|:-------------------:|:------------------:|:-------------------:|\n",
+    "| Czas obliczeń: |   0:00:03:187570   |   0:01:47:255207   |    0:00:12:202283   |    0:00:06.19056    |   0:00:01.244297   |         N/A         |\n",
+    "|     Wynik:     | -424.1005475279727 | -424.3410075315915 | -434.75072971385976 | -448.35260955122175 | -413.3311458614435 | -511.72973973049955 |\n",
+    "|       x1       | -43.48062160105746 |  442.733091920816  |  -41.20359124733889 |  452.2964724846119  | -280.8781219689222 |     -488.662570     |\n",
+    "|       x2       |  451.1398675964472 |  35.41288021302759 |  453.6274097993692  |  -97.73450254647534 | -432.6809245807742 |        512.0        |\n",
+    "\n",
+    "\n",
+    "## Wnioski:\n",
+    "\n"
    ]
   },
   {
